--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ci:build": "npm ci && npm run build"
   },
   "dependencies": {
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
